# CheckTravelAgency

./: package-lock.json
travelbid-backend/: .gitignore  alembic.ini  main.py  pyproject.toml
travelbid-backend/alembic/: env.py
travelbid-backend/alembic/versions/: 777f87d6329b_add_hashed_password_and_membership_plan_.py  909ae5d150bc_initial.py  9aa1056a1591_initial_schema.py  a5142ced3e00_add_is_active_to_agency_profiles.py
travelbid-backend/app/: base.py  models.py
travelbid-backend/app/auth/: dependencies.py  router.py  schemas.py
travelbid-backend/app/core/: auth_middleware.py  auth_utils.py  config.py  database.py  rate_limit_middleware.py  rbac_dep.py  security.py
travelbid-backend/app/modules/agency/: agency_model.py  agency_router.py  agency_schema.py  agency_service.py
travelbid-backend/app/modules/bid/: bid_model.py  bid_router.py  bid_schema.py  bid_service.py
travelbid-backend/app/modules/conversation/: conversation_model.py  conversation_router.py  conversation_schema.py  conversation_service.py
travelbid-backend/app/modules/message/: message_model.py  message_router.py  message_schema.py  message_service.py
travelbid-backend/app/modules/support/: support_model.py  support_router.py  support_schema.py  support_service.py
travelbid-backend/app/modules/trip/: trip_request.py  trip_request_model.py  trip_router.py  trip_schema.py  trip_service.py
travelbid-backend/app/modules/user/: user_model.py  user_router.py  user_schema.py  user_service.py
travelbid-frontend/: .env.example  package-lock.json  package.json
(+24 files in other folders)
